# dalo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  release-please.yml
docs/: agents.md  ci.md  getting-started.md  reference.md  troubleshooting.md  uninstall.md
docs/adr/: 0001-project-language.md
docs/audits/: 2026-07-04-v0.4-audit.md
docs/milestones/: 0000-repository-toolchain-scaffold.md  0001-store-config-init.md  0002-target-registry.md  0003-inventory-scanner.md  0004-resolver-status-model.md  0005-materializer-sync-loop.md  0006-team-sources-git-safety.md  0007-user-lock-multisource.md  0008-adopt-minimal-resolve.md  0009-doctor-diagnostics.md  0010-v1-release-readiness.md  0011-catalog-source-selection.md  0012-catalog-drift-reporting.md  0013-required-closure-expansion.md  0014-instruction-pack-managed-blocks.md  0015-instruction-pack-discovery-overlap.md  0016-v1-1-release-readiness.md  0017-team-catalog-composition.md  README.md
npm/: README.md  package.json
site/: CNAME  README.md  index.html  install.md  install.sh  main.js  robots.txt  sitemap.xml  styles.css
src/: adopt.rs  agent.rs  approval.rs  audit.rs  autosync.rs  catalog.rs  cli.rs  config.rs  doctor.rs  error.rs  git.rs  instructions.rs  inventory.rs  lib.rs  lockfile.rs  main.rs  materialize.rs  resolver.rs  source.rs  status.rs  store.rs  target.rs  team_manifest.rs  term.rs  update.rs
tests/: cli.rs  docs.sh  e2e.rs  install.sh  workflows.sh
video/: README.md  package.json  pnpm-lock.yaml
(+22 files in other folders)
