[package]
name = "dalo"
version = "0.1.0"
edition = "2024"
description = "Git-backed skill management for AI agents."
license = "MIT"
repository = "https://github.com/sebastian-software/dalo"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
toml = "1.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
unsafe-code = "forbid"

[lints.clippy]
all = "warn"
redundant-clone = "warn"
manual-ok-or = "warn"
needless-collect = "warn"
