[package]
name = "dalo"
version = "0.8.0"
edition = "2024"
rust-version = "1.93"
description = "Git-backed skill management for AI agents."
license = "MIT"
repository = "https://github.com/sebastian-software/dalo"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
toml = "1.1"
yaml_serde = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1.11.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/dalo-v{ version }/{ name }-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
unsafe-code = "forbid"

[lints.clippy]
all = "warn"
redundant-clone = "warn"
manual-ok-or = "warn"
needless-collect = "warn"
